fixed icon not visible

--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@@ -37,26 +37,32 @@
     flex-direction: row;
     margin: 20px 0 0 40px;
   }
-  &__search-person__field {
-    width: 30%;
+  &__field {
+    width: 500px;
     height: 48px;
+    margin-right: 24px;
     position: relative;
   }
-  &__search-person__field-icon {
+  &__field-icon {
     position: absolute;
+    top: 12px;
+    left: 16px;
+    width: 24px;
+    height: 24px;
     background: url('../../../assets/images/search.svg') no-repeat left;
   }
   &__input {
+    width: 500px;
+    height: 48px;
+    font-size: 18px;
+    padding-left: 48px;
+    margin-right: 24px;
     display: flex;
-
     background-color: @color-white-ff;
     background-position: 19px;
     border: 2px solid @color-gray-42;
     box-sizing: border-box;
     border-radius: 24px;
-    font-size: 18px;
-    padding-left: 48px;
-    margin-right: 24px;
   }
   &__button {
     display: flex;
@@ -99,19 +105,19 @@
         font-size: 16px;
       }
     }
-
+    &__field {
+      width: 300px;
+    }
     &__search {
-      &._input {
-        width: 70%;
-        height: 36px;
-        margin-right: 16px;
-        padding-left: 16%;
-      }
+    }
+    &__input {
+      width: 300px;
+      margin-right: 16px;
+      padding-left: 16%;
+    }
 
-      &._button {
-        width: 100px;
-        height: 36px;
-      }
+    &__button {
+      width: 100px;
     }
   }
 }
